--- a/NewsBoard/src/index.css
+++ b/NewsBoard/src/index.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
 
 *:where(
     :not(html, iframe, canvas, img, svg, video, audio):not(svg *, symbol *)
